<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_demo"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/demo_show" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/add_tile" />
        <item
            android:id="@+id/nav_hide"
            android:checked="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/hide_tile" />
    </group>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_set_ip"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/set_ip" />
        </menu>
    </item>
</menu>
