<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:orientation="vertical"
    tools:context="com.idsmanager.eagleeye.ui.activity.SearchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/add_problem_inspection"
        android:textColor="@color/textName"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray2" />

    <LinearLayout style="@style/ShowLinearStyle">

        <TextView
            style="@style/InspectionStyle"
            android:text="@string/date" />

        <EditText
            android:id="@+id/et_search_add"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout style="@style/ShowLinearStyle">

        <TextView
            style="@style/InspectionStyle"
            android:text="@string/problem_type" />

        <EditText
            android:id="@+id/et_search_add_type"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout style="@style/ShowLinearStyle">

        <TextView
            style="@style/InspectionStyle"
            android:text="@string/detail" />

        <EditText
            android:id="@+id/et_search_add_detail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_inter_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/textName"
        android:text="完成" />
</LinearLayout>
