<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_show"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/wutong" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/mingchen" />

            <TextView
                android:id="@+id/tv_fragment_name_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/show_name"
                android:textColor="@color/textName"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_show_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/my2"
                android:gravity="center"
                android:text="@string/tv_show_position"
                android:textColor="@color/itemColor" />
        </LinearLayout>


        <LinearLayout style="@style/ShowLinearStyle">

            <TextView
                style="@style/InspectionStyle"
                android:text="@string/gps" />

            <TextView
                android:id="@+id/tv_fragment_show_latitude"
                style="@style/InspectionStyle"
                android:text="116.3999125" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:background="@color/gray2" />

        <LinearLayout style="@style/ShowLinearStyle">

            <TextView
                style="@style/InspectionStyle"
                android:text="@string/gps2" />

            <TextView
                android:id="@+id/tv_fragment_show_longitude"
                style="@style/InspectionStyle"
                android:text="39.3999125" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/wenti" />

            <TextView
                android:id="@+id/tv_fragment_inspection_show"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/problem"
                android:textColor="@color/textName"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/ib_add_problem"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button" />
        </LinearLayout>

        <ListView
            android:id="@+id/ls_problem"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_show_no_problem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="点击可添加" />
    </LinearLayout>
</ScrollView>